<resources>
    <string name="app_name">萌宝养成</string>
    <string name="app_description">萌宝成长日记，陪伴孩子每一天</string>
    <string name="activity_about">关于</string>
    <string name="activity_login">登录</string>
    <string name="activity_forget">找回密码</string>
    <string name="activity_verification">验证码</string>
    <string name="activity_newPassword">设置新密码</string>
    <string name="activity_agreement">用户协议</string>
    <string name="activity_cookbook">每周食谱</string>
    <string name="activity_collect">我的收藏</string>
    <string name="activity_setting">基础设置</string>
    <string name="activity_address_book">通讯录</string>
    <string name="activity_courses">课程表</string>
    <string name="activity_grow_detail">成长明细</string>
    <string name="activity_grow_rule">成长规则</string>
    <string name="activity_homework">亲子作业</string>
    <string name="activity_homework_detail">亲子作业</string>
    <string name="activity_homework_appraise">作业评分</string>
    <string name="activity_album">班级相册</string>
    <string name="activity_pictures">班级相册</string>
    <string name="activity_pictures_detail">班级相册</string>
    <string name="activity_attendance">考勤记录</string>
    <string name="activity_comments">老师评语</string>
    <string name="activity_comments_detail">老师评语</string>
    <string name="activity_comments_reply">回复点评</string>
    <string name="activity_inform">通知</string>
    <string name="activity_inform_detail">通知详情</string>
    <string name="activity_info_baby">萌宝资料</string>
    <string name="activity_info_parents">我的资料</string>
    <string name="activity_info_baby_name">更改昵称</string>
    <string name="activity_info_parents_name">更改名字</string>
    <string name="activity_info_parents_resume">个性签名</string>
    <string name="activity_change_phone">更换手机号码</string>
    <string name="activity_change_password">修改密码</string>
    <string name="activity_change_verification">验证码</string>
    <string name="activity_school_photo">校园风采</string>
    <string name="activity_school_photo_detail">校园风采</string>
    <string name="activity_love_remark">爱心备注</string>
    <string name="activity_love_add">增加提醒</string>
    <string name="activity_binding_account">账号绑定</string>
    <string name="activity_binding_user">绑定用户</string>
    <string name="activity_message">消息中心</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">排行</string>
    <string name="title_notifications">个人</string>
    <string name="fun_attendance">考勤</string>
    <string name="fun_cookbook">食谱</string>
    <string name="fun_inform">通知</string>
    <string name="fun_address_book">通讯录</string>
    <string name="fun_courses">课表</string>
    <string name="fun_class_pictures">相册</string>
    <string name="fun_homework">亲子作业</string>
    <string name="fun_comments">点评</string>
    <string name="fun_school_photo">校园风采</string>
    <string name="fun_love_remark">爱心备注</string>
    <string name="fun_message">消息中心</string>
    <string name="company_name">图灵谷（北京）科技有限公司</string>
    <string name="company_web">网址</string>
    <string name="company_web_content">www.turingoal.com</string>
    <string name="company_telephone">电话</string>
    <string name="company_telephone_content">010-89942808</string>
    <string name="company_mail">邮箱</string>
    <string name="company_mail_content">service@turingoal.com</string>
    <string name="company_weibo">微博</string>
    <string name="company_weibo_content">http://weibo.com/turingoal</string>
    <string name="company_address">地址</string>
    <string name="company_address_content">北京昌平东亚上北10号1单元1908室</string>
    <string name="string_login_username">账号</string>
    <string name="string_password">密码</string>
    <string name="string_login">登录</string>
    <string name="string_login_register">立即注册</string>
    <string name="string_login_forget">忘记密码？</string>
    <string name="string_login_other">其他登录方式</string>
    <string name="string_remember">记住密码</string>
    <string name="string_username_max_hint">用户名最大长度是24</string>
    <string name="string_password_max_hint">密码的最大长度是24</string>
    <string name="string_username_min_hint">用户名最小长度是5</string>
    <string name="string_password_min_hint">密码的最小长度是6</string>
    <string name="phone">手机号码</string>
    <string name="next">下一步</string>
    <string name="getVerification">获取</string>
    <string name="string_phone_max_hint">电话的最大长度是11</string>
    <string name="forget_hint">找回密码需要通过短信验证。</string>
    <string name="verification_hint">验证码已发送到相关联手机：</string>
    <string name="verification_again">重新获取验证码（%1$dS）</string>
    <string name="verification_again_finish">点击重新获取验证码</string>
    <string name="verification_again_success">获取验已重新发送</string>
    <string name="verification_error">验证码错误</string>
    <string name="verification_success">验证码正确</string>
    <string name="new_password">新密码</string>
    <string name="string_save">保存</string>
    <string name="baby_name">豆芽</string>
    <string name="dynamic">恭喜%1$s小朋友在%2$s获得%3$d朵小红花</string>
    <string name="version_1">新手上路</string>
    <string name="version_2">无名小卒</string>
    <string name="version_3">敏而好学</string>
    <string name="version_4">业精于勤</string>
    <string name="version_5">励精图治</string>
    <string name="version_6">略有小成</string>
    <string name="version_7">苦心孤诣</string>
    <string name="version_8">精益求精</string>
    <string name="version_9">出类拔萃</string>
    <string name="version_10">鹤立鸡群</string>
    <string name="version_11">才华横溢</string>
    <string name="version_12">博大精深</string>
    <string name="version_13">神乎其技</string>
    <string name="version_14">超群绝伦</string>
    <string name="version_15">出神入化</string>
    <string name="version_16">登峰造极</string>
    <string name="version_17">神乎其技</string>
    <string name="version_18">无与伦比</string>
    <string name="version_19">博览群书</string>
    <string name="version_20">绝世超伦</string>
    <string name="version_21">超凡入圣</string>
    <string name="version_22">震古烁今</string>
    <string name="version_23">流芳百世</string>
    <string name="version_24">名传千载</string>
    <string name="version_25">万古流芳</string>
    <string name="title_rank">排行榜</string>
    <string name="rank">第%1$d名</string>
    <string name="rank_upgrade">经验榜</string>
    <string name="rank_flower">红花榜</string>
    <string name="default_parents_name">萌宝家长</string>
    <string name="default_resume">产房里传出的第一声啼哭，第一次吃奶，第一次爬行，第一次叫父亲母亲，第一次恶作剧和第一次受罚。每一次都幻化成关于你的美妙故事!</string>
    <string name="detail">明细</string>
    <string name="rule1_title">每日签到</string>
    <string name="rule1_content">每日签到增长活跃度</string>
    <string name="rule2_title">提交作业</string>
    <string name="rule2_content">每日按时提交作业</string>
    <string name="rule3_title">活跃用户</string>
    <string name="rule3_content">在线时长达到五分钟</string>
    <string name="collect">我的收藏</string>
    <string name="email">园长信箱</string>
    <string name="share">分享应用</string>
    <string name="setting">基础设置</string>
    <string name="copy_success">复制文本成功</string>
    <string name="copyurl_success">复制链接成功</string>
    <string name="favorite_success">收藏成功</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="food_1">早餐</string>
    <string name="food_2">早餐加餐</string>
    <string name="food_3">午餐</string>
    <string name="food_4">午餐加餐</string>
    <string name="food_5">晚餐</string>
    <string name="search">搜索</string>
    <string name="string_about">关于我们</string>
    <string name="string_agreement">使用协议</string>
    <string name="string_out">退出</string>
    <string name="string_principal">园长</string>
    <string name="string_teacher">老师</string>
    <string name="string_parents">家长</string>
    <string name="forenoon">上午</string>
    <string name="rest">午休</string>
    <string name="afternoon">下午</string>
    <string name="homework_submit">上交作业</string>
    <string name="no_appraise">未评价</string>
    <string name="homework_yes">已完成</string>
    <string name="homework_no">未完成</string>
    <string name="homework_score">作业评分</string>
    <string name="homework_appraise_tv">作业评价</string>
    <string name="homework_appraise_btn">确定打分</string>
    <string name="attendance1">迟到</string>
    <string name="attendance2">早退</string>
    <string name="attendance3">旷课</string>
    <string name="attendance4">请假</string>
    <string name="reply_request">回复点评</string>
    <string name="my_reply">我的回复</string>
    <string name="baby_info_nickname">萌宝昵称</string>
    <string name="baby_info_name">萌宝姓名</string>
    <string name="baby_info_gender">萌宝性别</string>
    <string name="baby_info_birthday">萌宝生日</string>
    <string name="baby_info_relation">萌宝关系</string>
    <string name="baby_info_interest">萌宝兴趣</string>
    <string name="baby_info_school">萌宝学校</string>
    <string name="baby_info_class">萌宝班级</string>
    <string name="baby_info_time">入园时间</string>
    <string name="edit">编辑</string>
    <string name="man">男</string>
    <string name="parents_info_name">家长姓名</string>
    <string name="parents_info_phone">手机号码</string>
    <string name="binding">绑定账号</string>
    <string name="parents_info_change">修改密码</string>
    <string name="parents_info_quit">退出登录</string>
    <string name="new_phone">新手机号码</string>
    <string name="new_phone_hint">更改手机号码需要通过短信验证。</string>
    <string name="password_old">旧密码</string>
    <string name="password_new">新密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="change">确定修改</string>
    <string name="change_password_hint">密码修改成功，请重新登录！</string>
    <string name="string_password_equals_hint">两次密码不同</string>
    <string name="remark_title">请选择</string>
    <string name="remark">备注</string>
    <string name="rb1">喂药</string>
    <string name="rb2">忌口</string>
    <string name="rb3">物品</string>
    <string name="rb4">其他</string>
    <string name="binding_qq">绑定QQ</string>
    <string name="binding_WeChat">绑定微信</string>
    <string name="binding_Sina">绑定新浪</string>
    <string name="binding_no">绑定</string>
    <string name="binding_yes">已绑定</string>
    <string name="binding_user">绑定用户</string>
    <string name="message_delete_hint">确定要删除这条消息吗？</string>
    <string name="item_fun_delete">删除</string>
    <string name="hint_title_select">请选择</string>
    <string name="common_blank"></string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="back_return">返回</string>
    <string name="noData">没有数据</string>
    <string name="common_test">测试数据</string>
    <string name="app_title">萌宝养成</string>
    <string name="dbclick_exit">再按一次退出程序</string>
    <string name="token_expired">登录信息已过期，请重新登录！</string>
    <string name="empty">没有数据</string>
    <string name="error">出错了~</string>
    <string name="ruleAZaz09">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="rule09">0123456789</string>
</resources>