<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFAFA"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homework_score"
            android:textColor="#212121" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="4.5"
            android:textColor="#F9A825" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/rbHomework"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="4.5"
        android:stepSize="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/homework_appraise_tv"
        android:textColor="#212121" />

    <EditText
        android:id="@+id/etAppraise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/bg_ll_solid"
        android:gravity="top|start"
        android:maxHeight="@dimen/dp_250"
        android:maxLength="140"
        android:minHeight="@dimen/dp_150"
        android:padding="@dimen/dp_4"
        android:textColor="#616161" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="0/140" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnAppraise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:background="@drawable/bg_btn_blue_selector"
        android:enabled="false"
        android:text="@string/homework_appraise_btn"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/sp_18" />
</LinearLayout>