<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_24">

            <FrameLayout
                android:id="@+id/flAvatar"
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <ImageView
                    android:id="@+id/ivAvatarBg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_avatar_default" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivAvatar"
                        android:layout_width="@dimen/dp_80"
                        android:layout_height="@dimen/dp_80"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_avatar_default" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_12"
                        android:layout_marginTop="@dimen/dp_16"
                        android:drawableEnd="@drawable/ic_edit"
                        android:gravity="center"
                        android:text="编辑头像"
                        android:textColor="#212121" />
                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/llBabyNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_fun"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baby_info_nickname"
                    android:textColor="#212121" />

                <TextView
                    android:id="@+id/tvBabyNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:lines="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFAFAFA"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baby_info_name"
                    android:textColor="#212121" />

                <TextView
                    android:id="@+id/tvBabyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:lines="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_16"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFAFAFA"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baby_info_gender"
                    android:textColor="#212121" />

                <TextView
                    android:id="@+id/tvBabyGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:lines="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_16"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFAFAFA"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baby_info_birthday"
                    android:textColor="#212121" />

                <TextView
                    android:id="@+id/tvBabyBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:lines="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_16"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFAFAFA"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baby_info_relation"
                    android:textColor="#212121" />

                <TextView
                    android:id="@+id/tvBabyRelation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:lines="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_16" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFAFAFA"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baby_info_school"
                    android:textColor="#212121" />

                <TextView
                    android:id="@+id/tvBabySchool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:lines="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_16"
                android:background="@color/line" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFAFAFA"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baby_info_class"
                    android:textColor="#212121" />

                <TextView
                    android:id="@+id/tvBabyClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:lines="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_16"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFAFAFA"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baby_info_time"
                    android:textColor="#212121" />

                <TextView
                    android:id="@+id/tvBabyTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:lines="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
